# modern-cmake-template

./: CMakeLists.txt  README.md  replacemeConfig.cmake
cmake/: version.cmake
include/replace-me/: version.h
include/replaceme/: version.h
script/: setup_project.ps1  setup_project.sh
test/: CMakeLists.txt
